--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,12 +1,3 @@
-html,
-body {
-    background-color: #fff;
-    color: #636b6f;
-    font-family: 'Nunito', sans-serif;
-    font-weight: 200;
-    height: 100vh;
-    margin: 0;
-}
 
 .full-height {
     height: 100vh;
@@ -55,11 +46,29 @@ body {
 }
 
 .red2 {
-    color: rgb(143, 9, 9);
+    color: rgb(255, 255, 255);
 }
 
 .titulosite{
     font-size: 44px;
+}
+.udemy{
+    color: blueviolet;
+    text-decoration: none
+}
+.bot-modulos{
+    margin-top: 30px;
+}
+.btn-group{
+    margin-top: 20px;
+}
+.btn_voltar{
+    margin-top: 30px;
+    margin-bottom: 0;
+}
+
+button a{
+    color: black;
 }
 
 footer p {
