--- a/public/css/estilo_basico.css
+++ b/public/css/estilo_basico.css
@@ -45,6 +45,10 @@ button {
     border: solid 1px #333;
 }
 
+.msg-erro{
+    color: red;
+}
+
 button {
     background-color: #7ab829;
     cursor: pointer;
