--- a/public/css/estilo_basico.css
+++ b/public/css/estilo_basico.css
@@ -167,11 +167,18 @@ button:hover {
     background-color: #2a9ee2;
     text-align: center;
 }
+.titulo-pagina2 {
+    padding: 70px 0px 20px 0px;
+    margin-bottom: 20px;
+    background-color: #2a9ee2;
+    text-align: center;
+}
 
 .informacao-pagina {
     text-align: center;
     margin-top: 30px;
 }
+
 
 .informacao-pagina p {
     color: #333;
