--- a/public/css/estilo_basico.css
+++ b/public/css/estilo_basico.css
@@ -170,6 +170,7 @@ button:hover {
 .titulo-pagina2 {
     padding: 70px 0px 20px 0px;
     margin-bottom: 20px;
+    margin-top: 40px;
     background-color: #2a9ee2;
     text-align: center;
 }
